--- a/css/basic.css
+++ b/css/basic.css
@@ -51,7 +51,7 @@
 .bg-white {
     background: #FFFFFF;
 }
-.bg-ligt-violet {
+.bg-light-violet {
     background: #E4E9F7;
 }
 .bg-brown {
@@ -64,7 +64,7 @@
     background: #6633ff;
 }
 .bg-plain {
-    background: #E4E9F7);
+    background: #E4E9F7;
 }
 .font-white {
     color: #FFFFFF;
@@ -239,7 +239,7 @@
 .pad-down {
 
 }
-@@media (max-width:500px) {
+@media (max-width:500px) {
   .pad-up{
     padding-top: 10%;
   }
@@ -247,3 +247,37 @@
     padding-bottom: 5%;
   }
 }
+
+.menu-icon::after {
+    /* the block itself, the first line */
+    background: #000000;
+    /* middle and bottom */
+    box-shadow: 0 7px 0 #000000, 0 14px 0 #000000;
+    /* respect WebKit */
+    -webkit-box-shadow: 0 7px 0 #000000, 0 14px 0 #000000;
+}
+.top-bar ul {
+  background: #E4E9F7;
+}
+.navbar-height {
+  height: 10vh;
+}
+/* .top-bar .toggle-topbar.menu-icon a {
+    height: 34px;
+    line-height: 33px;
+    padding: 0;
+    padding-right: 30px;
+    color: #FFF;
+    position: relative;
+}
+
+.top-bar .toggle-topbar.menu-icon a::after {
+    box-shadow: 0 6px 0 1px #FFFFFF, 0 14px 0 1px #FFFFFF, 0 22px 0 1px #FFFFFF;
+    -webkit-box-shadow: 0 6px 0 1px #FFFFFF, 0 14px 0 1px #FFFFFF, 0 22px 0 1px #FFFFFF;
+    display: block;
+    height: 2px;
+    right: 0px;
+    position: absolute;
+    top: 1px;
+    width: 20px;
+} */
