--- a/css/basic.css
+++ b/css/basic.css
@@ -126,6 +126,9 @@
     padding-top: 30vh;
   }
 }
+.pad-very-lit {
+    padding: 5% 6%;
+}
 
 .pad-down {
     padding-bottom: 30%;
@@ -206,8 +209,14 @@
 .mar-left-very-very-lit {
     margin-left: 3%;
 }
-.full-h {
-  height: 100%;
+.f-h {
+  min-height: 90vh;
+}
+.h-h {
+  min-height: 45vh;
+}
+.m-h {
+  min-height: 67vh;
 }
 .nomar {
   margin-bottom: 0;
@@ -262,9 +271,12 @@
 .navbar-height {
   height: 10vh;
 }
-.top-bar {
+/* .top-bar {
   padding: 10px;
   box-shadow: 0px 100px;
+} */
+.max-height {
+  min-height: 100vh;
 }
 /* .top-bar .toggle-topbar.menu-icon a {
     height: 34px;
