--- a/css/app.css
+++ b/css/app.css
@@ -8,7 +8,7 @@ body {
 }
 #home {
     height: 100vh;
-    background: url('../img/oh.png') center center;
+    background: url('../oh.png') center center;
     position: relative;
     min-height: 100%;
     -webkit-background-size: cover;
@@ -180,9 +180,9 @@ body {
   margin-top: 5%;
 }
 
-@media (max-width:400px) {
-  #register{
-    background-image: url('../img/mobile/register.png');
+@media (max-width:500px) {
+  #register > div{
+    background-image: url('../img/mobile/register.svg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
