--- a/css/basic.css
+++ b/css/basic.css
@@ -125,89 +125,6 @@
     padding-top: 30vh;
   }
 }
-.pad-very-lit {
-    padding: 5% 6%;
-}
-
-.pad-down {
-    padding-bottom: 30%;
-}
-.pad-down-lit {
-    padding-bottom: 10%;
-}
-.pad-down-very-lit {
-    padding-bottom: 5%;
-}
-.pad-down-very-very-lit {
-    padding-bottom: 3%;
-}
-
-.pad-up {
-    padding-top: 30%;
-}
-.pad-up-lit {
-    padding-top: 10%;
-}
-.pad-up-very-lit {
-    padding-top: 5%;
-}
-.pad-right {
-    padding-right: 30%;
-}
-.pad-right-lit {
-    padding-right: 10%;
-}
-.pad-right-very-lit {
-    padding-right: 5%;
-}
-.pad-left {
-    padding-left: 30%;
-}
-.pad-left-lit {
-    padding-left: 10%;
-}
-.pad-left-very-lit {
-    padding-left: 5%;
-}
-.mar-down {
-    margin-bottom: 30%;
-}
-.mar-down-lit {
-    margin-bottom: 10%;
-}
-.mar-down-very-lit {
-    margin-bottom: 5%;
-}
-.mar-up {
-    margin-top: 30%;
-}
-.mar-up-lit {
-    margin-top: 10%;
-}
-.mar-up-very-lit {
-    margin-top: 5%;
-}
-.mar-right {
-    margin-right: 30%;
-}
-.mar-right-lit {
-    margin-right: 10%;
-}
-.mar-right-very-lit {
-    margin-right: 5%;
-}
-.mar-left {
-    margin-left: 30%;
-}
-.mar-left-lit {
-    margin-left: 10%;
-}
-.mar-left-very-lit {
-    margin-left: 5%;
-}
-.mar-left-very-very-lit {
-    margin-left: 3%;
-}
 .f-h {
   min-height: 90vh;
 }
@@ -242,17 +159,43 @@
 }
 
 .pad-up {
-  padding-top: 20%;
+  padding-top: 70px;
 }
 .pad-down {
-
+  padding-bottom: 70px;
 }
+.pad-up-lit {
+  padding-top: 50px;
+}
+.pad-down-lit {
+  padding-bottom: 50px;
+}
+.mar-up {
+  margin-top: 70px;
+}
+.mar-down {
+  margin-bottom: 70px;
+}
+.mar-up-lit {
+  margin-top: 50px;
+}
+.mar-down-lit {
+  margin-bottom: 50px;
+}
+
+.mar-right {
+  margin-right: 100px;
+}
+
 @media (max-width:500px) {
   .pad-up{
     padding-top: 10%;
   }
   .pad-down{
     padding-bottom: 5%;
+  }
+  .mar-right {
+    margin-right: 20px;
   }
 }
 
@@ -277,6 +220,17 @@
 .max-height {
   min-height: 100vh;
 }
+
+.show-only-small {
+  display: none;
+}
+@media screen and (max-width: 39.9375em) {
+  .show-only-small {
+    display: block;
+  }
+}
+
+
 /* .top-bar .toggle-topbar.menu-icon a {
     height: 34px;
     line-height: 33px;
@@ -296,3 +250,18 @@
     top: 1px;
     width: 20px;
 } */
+
+.footer-left {
+  padding-left: 40px;
+}
+.footer-right {
+  padding-right: 40px;
+}
+@media screen and (max-width: 39.9375em) {
+  .footer-left{
+    padding-left: 0px;
+  }
+  .footer-right{
+    padding-right: 0px;
+  }
+}
