--- a/css/basic.css
+++ b/css/basic.css
@@ -187,6 +187,10 @@
   margin-right: 100px;
 }
 
+.mar-right-lit {
+  margin-right: 50px;
+}
+
 @media (max-width:500px) {
   .pad-up{
     padding-top: 10%;
